# Task_list_proj1

./: .env  .env.example  .gitignore  API_README.md  ARCHITECTURE.md  Dockerfile  EXAMPLES.md  FASTAPI_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  cookies.txt  docker-compose.yml  env.example  example_usage.py  frontend_cookies.txt  login_test_cookies.txt  main.py  main_production.py  package-lock.json  production.env.template  pyproject.toml  refactor_phase2.md  requirements.txt  task_refactor.txt  task_refactorph1.md  test_auth_cookies.txt  test_cookies.txt  test_login_cookies.txt
.cursor/plans/: fix-all-linter-errors-b231418e.plan.md
.cursor/rules/: db-ops-restriction.mdc  dependency-injection.mdc  fastapi-begin.mdc  functionality-related-to-model-by-file.mdc  keep-functionality-related-to-model-by-file.md  keep-functionality-related-to-model-by-file.mdc  log-my-messages.mdc  uv.mdc
Docs/: Build_out_task_User_CRUD_chat.md  Claude command on 10-9-25 at 1700 hours -cursor_refactor_application_to_use_fast.md  cursor_analyze_flicker_issue_on_login_s.md  cursor_analyze_flicker_issue_on_login_s_1800 hours.md  cursor_analyze_flicker_issue_on_login_s_3pm.md  cursor_build_python_cli_crud_applicatio.md  cursor_create_button_not_functioning_on.md  cursor_debugging_axios_401_error_in_tas.md  cursor_fix_task_visibility_and_remove_u_11am.md  cursor_fix_tasks_page_styling_and_loadi.md  cursor_implement_nextjs_frontend_with_p.md  cursor_include_logo_on_startup_page.md  cursor_refactor_task_in_markdown_file_10_8_25 midnite.md  cursor_resolve_unused_import_error.md  cursor_troubleshooting.md  cursor_troubleshooting_runtime_and_netw.md  cursor_troubleshooting_uvicorn_errors.md  cursor_troubleshooting_uvicorn_errors_change_colors.md  cursor_verify_user_task_relationship_in.md
backend/src/: settings.py
frontend/: Dockerfile  README.md  jsconfig.json  next.config.js  package-lock.json  package.json  tailwind.config.js
src/: settings.py
src/Task_list_proj1/: __init__.py  cli.py  settings.py
src/User_int/: cli.py
src/api/: auth.py  beanie_tasks.py  (+5 more)
tests/: __init__.py  test_beanie_task.py  test_beanie_user.py  test_jwt_auth.py  test_task_model.py  test_user_model.py
(+75 files in other folders)
