[project]
name = "task-list-proj1"
version = "0.4.0"
description = "Application to allow user to create and track tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "beanie[fastapi]>=2.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.118.2",
    "motor[sdam]>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pymongo>=4.15.2",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]
